--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "chatty-shell"
-version = "0.1.1"
+version = "0.1.3"
 description = ""
 authors = ["Artur Dernst <artur@dernst.me>"]
 
@@ -8,7 +8,6 @@ authors = ["Artur Dernst <artur@dernst.me>"]
 python = "^3.10"
 langgraph = "^0.5.1"
 langchain = "^0.3.26"
-openai = "^1.93.0"
 langchain-community = "^0.3.27"
 langchain-openai = "^0.3.27"
 
@@ -20,3 +19,6 @@ include = "chatty_shell"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+chat = "chatty_shell.main:main"
