--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ langgraph = "^0.5.1"
 langchain = "^0.3.26"
 langchain-community = "^0.3.27"
 langchain-openai = "^0.3.27"
+pyperclip = "^1.9.0"
 
 [[tool.poetry.packages]]
 include = "chatty_shell"
